# graph-types-py

./: .coverage  .gitignore  README.md  pyproject.toml  ruff.toml  test_graph.py
docs/: VISUALIZATION.md  graph_types.md  graph_types_ua.md  hypergraph.md  index.md  multi_graph.md  pseudo_graph.md  simple_graph.md
examples/: comparison_demo.py  comprehensive_comparison.py  example_hypergraph.py  example_multigraph.py  example_pseudograph.py  example_simple_graph.py  graph_tool_visualization_demo.py  networkx_integration_demo.py  observer_demo.py  serialization_demo.py  team_formation_solver.py  test.py  usage_examples.py
tests/: conftest.py
tests/unit/: test_algorithms.py  test_edge_list.py  test_networkx_adapter.py  test_observers.py  test_serializers.py  test_simple_graph.py
